--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -14,9 +14,9 @@
 // }
 
 .features__thumb {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 120px;
     background-color: $mid-grey-color;
 }
