--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -3,15 +3,43 @@
     // padding-top: 94px;
 }
 
-// .features__list {
-//     display: flex;
-// }
+.features__list {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap; 
+    }
 
-// .features__item {
-//     &:not(:last-child) {
-//         margin-right: 30px;
-//     }
-// }
+    @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap; 
+    }
+    
+}
+
+.features__item {
+    &:not(:last-child) {
+        // margin-right: 30px;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: 354px;
+
+        &:nth-child(odd) {
+            margin-right: 30px
+        }
+        
+    }
+
+    @media screen and (min-width: 1200px) {
+        
+
+        &:not(:last-child) {
+            margin-right: 30px;
+            margin-bottom: 0px;
+        }
+        
+    }
+}
 
 .features__thumb {
     display: flex;
@@ -22,14 +50,16 @@
 }
 
 .features__title { 
+    font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
     color: $first-text-color; 
     text-transform: uppercase;
-    // margin-top: 30px;
+    margin-top: 30px;
+    text-align: center;
 }
 
 .features__text {
-    // margin-top: 10px;
+    margin-top: 10px;
     line-height: 1.71;
 } 
