--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -67,7 +67,10 @@
 }
 
 .nav__container.is-open {
-    display: flex;
+    @media screen and (max-width: 767px) {
+        display: flex;
+    }
+    
 }
 
 .nav__list {
