--- a/sass/utils/_section.scss
+++ b/sass/utils/_section.scss
@@ -8,9 +8,10 @@
 }
 
 .section__title {
-    font-size: 36px;
+    // font-size: 36px;
+    font-size: 28px;
     font-weight: 700;
-    line-height: 1.16;
+    line-height: 1.18;
     text-align: center;
     color: $first-text-color;
 }
