--- a/css/main.css
+++ b/css/main.css
@@ -83,9 +83,9 @@ li {
 }
 
 .section__title {
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.18;
   text-align: center;
   color: #212121;
 }
@@ -467,8 +467,10 @@ li {
   }
 }
 
-.features__item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .features__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -477,6 +479,9 @@ li {
   }
   .features__item:nth-child(odd) {
     margin-right: 30px;
+  }
+  .features__item .list-item:nth-child(-n + 2) {
+    margin-bottom: 30px;
   }
 }
 
@@ -511,6 +516,7 @@ li {
 }
 
 .product {
+  display: none;
   padding-top: 0;
 }
 
@@ -544,6 +550,23 @@ li {
   background-color: #f5f4fa;
 }
 
+.team__list {
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list {
+    flex-wrap: nowrap;
+  }
+}
+
 .member {
   font-size: 16px;
   line-height: 1.19;
@@ -551,6 +574,30 @@ li {
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .member:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .member {
+    width: 354px;
+  }
+  .member:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .member:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .member:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .member__info {
@@ -562,10 +609,18 @@ li {
   color: #212121;
 }
 
+.member__position {
+  margin-top: 10px;
+}
+
 .member__socials {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 16px;
+}
+
+.member__social:not(:last-child) {
+  margin-right: 10px;
 }
 
 .member__social-link {
