--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -16,10 +16,14 @@
 }
 
 .features__item {
-    &:not(:last-child) {
-        // margin-right: 30px;
-        margin-bottom: 30px;
+
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+            // margin-right: 30px;
+            margin-bottom: 30px;
+        }
     }
+    
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         width: 354px;
@@ -27,6 +31,10 @@
         &:nth-child(odd) {
             margin-right: 30px
         }
+
+        .list-item:nth-child(-n + 2) {
+            margin-bottom: 30px;
+          }
         
     }
 
