--- a/css/main.css
+++ b/css/main.css
@@ -633,7 +633,14 @@ li {
   fill: #fff;
 }
 
+.clients__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
 .clients__item {
+  width: calc((100% - 30px) / 2);
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -641,9 +648,34 @@ li {
   transition-property: border, fill;
 }
 
-.clients__item:focus, .clients__item:hover {
-  border: 1px solid #2196F3;
-  fill: #2196F3;
+@media screen and (max-width: 767px) and (max-width: 767px) {
+  .clients__item:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .clients__item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients__item {
+    width: calc((100% - 60px) / 3);
+  }
+  .clients__item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .clients__item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: calc((100% - 150px) / 6);
+  }
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients__link {
@@ -652,6 +684,11 @@ li {
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+.clients__link:focus, .clients__link:hover {
+  border: 1px solid #2196F3;
+  fill: #2196F3;
 }
 
 .clients__logo {
