--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,10 +1,12 @@
-// .clients__list {
-//     display: flex;
-//     margin-top: 50px;
-// }
+.clients__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
 
 .clients__item {
     // width: 170px;
+    width: calc((100% - 30px) / 2);
     height: 92px;
     border: 1px solid $social-icon-color;
     border-radius: 4px;
@@ -12,14 +14,38 @@
     @extend %animation;
     transition-property: border, fill;
 
-    // &:not(:last-child) {
-    //     margin-right: 30px;
-    // }
 
-    &:focus,
-    &:hover {
-        border: 1px solid $brand-color;
-        fill: $brand-color;
+
+
+    @media screen and (max-width: 767px) and (max-width: 767px) {
+        &:nth-child(odd) {
+            margin-right: 30px;
+        }
+
+        &:not(:nth-last-child(-n + 2)) {
+            margin-bottom: 30px;
+        }
+
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: calc((100% - 60px) / 3);
+
+        &:not(:nth-child(3n)) {
+            margin-right: 30px;
+        }
+
+        &:not(:nth-last-child(-n + 3)) {
+            margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: calc((100% - 150px) / 6);
+        
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
     }
 }
 
@@ -29,6 +55,13 @@
     align-items: center;
     width: 100%;
     height: 100%;
+
+    
+    &:focus,
+    &:hover {
+        border: 1px solid $brand-color;
+        fill: $brand-color;
+    }
 }
 
 .clients__logo {
