--- a/css/main.css
+++ b/css/main.css
@@ -510,6 +510,12 @@ li {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .features__title {
+    text-align: left;
+  }
+}
+
 .features__text {
   margin-top: 10px;
   line-height: 1.71;
@@ -520,7 +526,32 @@ li {
   padding-top: 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .product {
+    display: block;
+  }
+}
+
+.product__list {
+  display: flex;
+  margin-top: 50px;
+}
+
+.product__category {
+  position: relative;
+}
+
+.product__category:not(:last-child) {
+  margin-right: 30px;
+}
+
 .product__name {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 70px;
   color: #fff;
   background-color: rgba(47, 48, 58, 0.8);
