--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -65,6 +65,10 @@
     text-transform: uppercase;
     margin-top: 30px;
     text-align: center;
+
+    @media screen and (min-width: 768px) {
+        text-align: left;
+    }
 }
 
 .features__text {
