--- a/sass/components/_product.scss
+++ b/sass/components/_product.scss
@@ -1,28 +1,32 @@
 .product {
     display: none;
     padding-top: 0;
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
 }
 
-// .product__list {
-//     display: flex;
-//     margin-top: 50px;
-// }
+.product__list {
+    display: flex;
+    margin-top: 50px;
+}
 
-// .product__category {
-//     position: relative;
+.product__category {
+    position: relative;
 
-//     &:not(:last-child) {
-//         margin-right: 30px;
-//     }
-// }
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
+}
 
 .product__name {
-    // position: absolute;
-    // bottom: 0;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: 70px;
     color: $white-color;
     background-color: $grey-with-opacity;
