--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,9 @@ li {
   margin-right: auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
+    width: 480px;
   }
 }
 
@@ -1100,6 +1100,26 @@ li {
   margin-right: auto;
 }
 
+.filters-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -8px;
+}
+
+@media screen and (min-width: 768px) {
+  .filters-list {
+    justify-content: center;
+  }
+}
+
+.filter {
+  margin-top: 8px;
+}
+
+.filter:not(:last-child) {
+  margin-right: 8px;
+}
+
 .filter__button {
   padding: 6px 22px;
   border: none;
@@ -1118,8 +1138,50 @@ li {
   box-shadow: 0px 2px 2px 0px #0000001F,  0px 1px 2px 0px #00000014, 0px 3px 1px 0px #0000001A;
 }
 
+.portfolio {
+  margin-top: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -30px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .project:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .project {
+    width: calc((100% - 30px) / 2);
+    margin-bottom: 30px;
+  }
+  .project:nth-child(odd) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project {
+    width: calc((100% - 60px) / 3);
+    margin-bottom: 30px;
+  }
+  .project:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+}
+
 .project__link {
-  display: block;
+  display: flex;
+  transition-property: box-shadow;
+  flex-direction: column;
+  height: 100%;
   transition-property: box-shadow;
 }
 
@@ -1170,6 +1232,7 @@ li {
 .project__text {
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
+  flex-grow: 1;
 }
 
 .project__name {
