--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -4,8 +4,8 @@
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (max-width: 767px) {
-        max-width: 480px;    
+    @media screen and (min-width: 480px) {
+        width: 480px;    
     }
     @media screen and (min-width: 768px) {
         width: 768px;    
