--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,8 +19,8 @@
 }
 
 .hero__container {
-    padding-right: 60px;
-    padding-left: 60px;
+    // padding-right: 60px;
+    // padding-left: 60px;
 
     @media screen and (min-width: 768px) {
         padding-right: 204px;
