--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,8 @@ li {
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .section__title {
@@ -398,6 +400,7 @@ li {
   background-position: center;
   background-size: cover;
   text-align: center;
+  max-width: 1600px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -912,6 +915,8 @@ li {
   background-color: rgba(0, 0, 0, 0.1);
   opacity: 1;
   transition-property: opacity, visibility;
+  padding: 90px 15px;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -920,20 +925,37 @@ li {
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.25);
+  transform: scale(1.25);
   opacity: 0;
 }
 
+@media screen and (min-width: 480px) {
+  .backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.25);
+  }
+}
+
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  padding: 44px 32px 36px 48px;
-  width: 528px;
+  position: relative;
+  padding: 40px;
   background-color: #fff;
-  opacity: 1;
-  transform: translate(-50%, -50%) scale(1);
+  transform: scale(1);
   transition-property: transform, opacity;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    transform: translate(-50%, -50%) scale(1);
+    top: 50%;
+    left: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .modal__close-btn {
@@ -963,8 +985,15 @@ li {
 .modal__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.5;
   color: #212121;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.2;
+  }
 }
 
 .modal__contact-form {
@@ -1022,6 +1051,7 @@ li {
 }
 
 .field__textarea {
+  margin-top: 4px;
   height: 120px;
   padding: 12px 16px;
   resize: none;
@@ -1045,7 +1075,7 @@ li {
 .field-checkbox__new {
   height: 16px;
   width: 16px;
-  border-radius: 4px;
+  border-radius: 2px;
   border: 2px solid #212121;
 }
 
@@ -1067,7 +1097,14 @@ li {
 
 .field-checkbox__label {
   display: inline-block;
-  font-size: 14px;
+  font-size: 12px;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .field-checkbox__label {
+    font-size: 14px;
+  }
 }
 
 .field-checkbox__policy {
