--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -9,7 +9,7 @@
     background-position: center;
     background-size: cover;
     text-align: center;
-    // max-width: 1600px;
+    max-width: 1600px;
 
     @media screen and (min-width: 1200px) {
         padding-top: 200px;
