--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,6 +8,9 @@
     opacity: 1;
     @extend %animation;
     transition-property: opacity, visibility;
+
+    padding: 90px 15px;
+    overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -16,21 +19,38 @@
 }
 
 .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(1.25); 
+    transform: scale(1.25);
     opacity: 0;
+
+    @media screen and (min-width: 480px) {
+        transform: translate(-50%, -50%) scale(1.25);
+    }
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 44px 32px 36px 48px;
-    width: 528px;
+    position: relative;
+    
+    // padding: 44px 32px 36px 48px;
+    padding: 40px;
     background-color: $white-color;
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+
+    transform: scale(1);
     @extend %animation;
     transition-property: transform, opacity;
+
+
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        transform: translate(-50%, -50%) scale(1);
+        top: 50%;
+        left: 50%;
+        // margin-left: auto;
+        // margin-right: auto;      
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 528px;
+    }
 } 
 
 .modal__close-btn {
@@ -61,8 +81,13 @@
 .modal__title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.2;
-    color: $first-text-color
+    line-height: 1.5;
+    color: $first-text-color;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+        line-height: 1.2;
+    }
 }
 
 .modal__contact-form {
@@ -122,6 +147,7 @@
 }
 
 .field__textarea {
+    margin-top: 4px;
     height: 120px;
     padding: 12px 16px;
     resize: none;
@@ -145,7 +171,8 @@
 .field-checkbox__new {
     height: 16px;
     width: 16px;
-    border-radius: 4px;
+    // border-radius: 4px;
+    border-radius: 2px;
     border: 2px solid $first-text-color;
 
     .field-checkbox__native:checked + & {
@@ -167,7 +194,12 @@
 
 .field-checkbox__label {
     display: inline-block;
-    font-size: 14px;
+    font-size: 12px;
+    letter-spacing: 0.03em;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+    }
 }
 
 .field-checkbox__policy {
