--- a/sass/utils/_section.scss
+++ b/sass/utils/_section.scss
@@ -3,8 +3,8 @@
     // padding-bottom: 94px;
     padding-top: 60px;
     padding-bottom: 60px;
-    // margin-left: auto;
-    // margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .section__title {
