--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ li {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 
 @media screen and (min-width: 480px) {
@@ -82,6 +83,13 @@ li {
   padding-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section__title {
@@ -148,7 +156,7 @@ li {
   font-size: 24px;
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .header-contacts {
     flex-direction: column-reverse;
   }
@@ -160,19 +168,19 @@ li {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-contacts {
     flex-direction: column;
   }
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .header__item:not(:first-child) {
     margin-bottom: 32px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .header__item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -187,7 +195,7 @@ li {
   }
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .header__phone-item {
     color: #2196F3;
     font-size: 34px;
@@ -240,7 +248,7 @@ li {
   display: none;
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .nav__container {
     justify-content: space-between;
     flex-direction: column;
@@ -263,7 +271,7 @@ li {
   }
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .nav__container.is-open {
     display: flex;
   }
@@ -281,7 +289,7 @@ li {
   }
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .nav__item:not(:last-child) {
     margin-bottom: 32px;
   }
@@ -379,7 +387,7 @@ li {
   fill: currentColor;
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .contact__icon {
     display: none;
   }
@@ -395,7 +403,7 @@ li {
   padding-top: 118px;
   padding-bottom: 118px;
   background-color: #2F303A;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/hero-background.jpg");
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/hero-background-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -407,6 +415,36 @@ li {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
+  }
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../images/hero-background-mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../images/hero-background-desktop.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../images/hero-background-desktop@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../images/hero-background.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../images/hero-background@2x.jpg");
   }
 }
 
@@ -465,13 +503,13 @@ li {
   }
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .features__item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .features__item {
     width: 354px;
   }
@@ -605,13 +643,13 @@ li {
   border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .member:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .member {
     width: 354px;
   }
@@ -677,7 +715,7 @@ li {
   transition-property: border, fill;
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .clients__item:nth-child(odd) {
     margin-right: 30px;
   }
@@ -686,7 +724,7 @@ li {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients__item {
     width: calc((100% - 60px) / 3);
   }
@@ -735,7 +773,7 @@ li {
   text-align: center;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__container {
     padding-left: 89px;
     padding-right: 89px;
@@ -1183,13 +1221,13 @@ li {
   }
 }
 
-@media screen and (max-width: 767.999px) {
+@media screen and (max-width: 767px) {
   .project:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.999px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .project {
     width: calc((100% - 30px) / 2);
     margin-bottom: 30px;
