--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,7 +4,7 @@
     padding-bottom: 118px;
     background-color: $background-color;
     background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
-    url("../images/hero-background.jpg");
+    url("../images/hero-background-mobile.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -14,6 +14,40 @@
     @media screen and (min-width: 1200px) {
         padding-top: 200px;
         padding-bottom: 200px;
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
+        url("../../images/hero-background-mobile@2x.jpg");
+
+    }
+
+    @media screen and (min-width: 480px) {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
+        url("../../images/hero-background-desktop.jpg");
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
+            url("../../images/hero-background-desktop@2x.jpg");
+    
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
+        url("../../images/hero-background.jpg");
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
+            url("../../images/hero-background@2x.jpg");
+    
+        }
     }
 
 }
