--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -3,6 +3,7 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 
     @media screen and (min-width: 480px) {
         width: 480px;    
@@ -10,7 +11,6 @@
     @media screen and (min-width: 768px) {
         width: 768px;    
     }
-
     @media screen and (min-width: 1200px) {
         width: 1200px;    
     }
