--- a/sass/utils/_section.scss
+++ b/sass/utils/_section.scss
@@ -1,10 +1,14 @@
 .section {
-    // padding-top: 94px;
-    // padding-bottom: 94px;
+
     padding-top: 60px;
     padding-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .section__title {
