--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -39,13 +39,13 @@
 
     @media screen and (min-width: 768px) {
         background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
-        url("../../images/hero-background.jpg");
+        url("../images/hero-background.jpg");
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
-            url("../../images/hero-background@2x.jpg");
+            url("../images/hero-background@2x.jpg");
     
         }
     }
