--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -20,19 +20,19 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
         background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
-        url("../../images/hero-background-mobile@2x.jpg");
+        url("../images/hero-background-mobile@2x.jpg");
 
     }
 
     @media screen and (min-width: 480px) {
         background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
-        url("../../images/hero-background-desktop.jpg");
+        url("../images/hero-background-desktop.jpg");
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(to right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),
-            url("../../images/hero-background-desktop@2x.jpg");
+            url("../images/hero-background-desktop@2x.jpg");
     
         }
     }
