--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -6,7 +6,6 @@
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
-        margin-bottom: -30px;
         margin-top: 30px;
     }
 }
@@ -21,7 +20,11 @@
     
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         width: calc((100% - 30px) / 2);
-        margin-bottom: 30px;
+
+        &:nth-child(n + 3) {
+            margin-top: 30px;
+        }
+
         
         &:nth-child(odd) {
             margin-right: 30px;
@@ -37,15 +40,6 @@
             margin-right: 30px;
         }
     }
-    // width: calc((100% - 60px) / 3);
-
-    // &:not(:nth-child(3n)) {
-    //     margin-right: 30px;
-    // }
-
-    // &:not(:nth-last-child(-n + 3)) {
-    //     margin-bottom: 30px;
-    // }
 }
 
 .project__link {
@@ -104,17 +98,12 @@
         visibility: visible;
         opacity: 1;
     }
-
 }
 
 .project__text {
     padding: 20px 24px;
     border: 1px solid $light-grey-color;
     flex-grow: 1;
-    
-    @media screen and (min-width: 768px) {
-        // min-height: 146px;
-    }
 }
 
 .project__name {
